--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -10,16 +10,18 @@
 
   .main-nav {
     overflow: initial;
+    z-index: 99;
   }
 
   .nav-links {
     position: absolute;
-    background-color: white;
+    background-color: #0e1414;
     left: -100%;
     top: 100%;
     width: 100%;
     padding-block: 20px;
     transition: 0.2s ease-in-out;
+    padding: 30px 0;
   }
 
   .nav-links.active {
