--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
   background-color: var(--background-color);
   background-image: url(/images/bg-home.svg);
   background-repeat: no-repeat;
+  background-size: contain;
 }
 
 h1 {
