--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,8 @@ ul {
 
 .hover-link {
   color: #fff;
-  transition: 0.2s ease-out;
+  transition: 0.1s ease-out;
+  font-weight: bold;
 }
 
 .hover-link.active {
@@ -245,6 +246,90 @@ header {
 
 .features-card img {
   width: 60px;
+}
+
+/* CIO section */
+.grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 5rem 0;
+  margin: 5rem auto;
+}
+
+.grid-item {
+  margin: 1rem;
+  border: 1px solid rgb(67, 67, 67);
+  border-radius: 1rem;
+  padding: 2rem;
+  display: flex;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.grid-item:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: -16px;
+  right: -16px;
+  background: var(--accent-color);
+  height: 32px;
+  width: 32px;
+  border-radius: 32px;
+  transform: scale(1);
+  transform-origin: 50% 50%;
+  transition: transform 0.25s ease-out;
+}
+
+.grid-item:hover:before {
+  transform: scale(34);
+}
+
+.grid-item:hover {
+  transition: all 0.3s ease-out;
+  color: #ffffff;
+}
+
+.grid-item i {
+  font-size: 1.3rem;
+}
+
+.grid-item .descreption {
+  text-align: center;
+  margin-left: 2rem;
+}
+
+.grid-item h3 {
+  font-weight: 200;
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+}
+
+.grid-item p {
+  font-size: 1rem;
+}
+
+.go-corner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  top: 0;
+  right: 0;
+  background-color: var(--accent-color);
+  border-radius: 0 4px 0 32px;
+}
+
+.go-arrow {
+  margin-top: -4px;
+  margin-right: -4px;
+  color: white;
+  font-family: courier, sans;
 }
 
 /* big feature section */
