--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -15,13 +15,12 @@
 
   .nav-links {
     position: absolute;
-    background-color: #0e1414;
     left: -100%;
     top: 100%;
     width: 100%;
     padding-block: 20px;
     transition: 0.2s ease-in-out;
-    padding: 30px 0;
+    padding: 2rem 1rem;
   }
 
   .nav-links.active {
@@ -30,6 +29,10 @@
 
   .nav-links ul {
     flex-direction: column;
+    align-items: flex-start;
+    background-color: #182222;
+    border-radius: 0.5rem;
+    padding: 3rem;
   }
 
   .features-area {
@@ -73,6 +76,14 @@
     text-align: center;
   }
 
+  .header-right {
+    max-width: 60vw;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
   .features-card {
     min-width: calc(80%);
   }
@@ -97,19 +108,25 @@
     margin-left: 0;
   }
 
-  .big-feature-container {
-    flex-direction: column;
-  }
-
+  .big-feature-container,
   #second-big-feature {
     flex-direction: column;
+    margin-bottom: 8rem;
+  }
+
+  .feature-desc {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .feature-img {
+    margin-bottom: 2rem;
   }
 
   .footer-container {
     flex-direction: column;
-    text-align: center;
     gap: 40px;
-    align-items: center;
   }
 
   .link-column {
@@ -124,9 +141,8 @@
   }
 
   .sub-footer-container {
-    justify-content: space-between;
+    flex-direction: column;
     gap: 30px;
-    flex-wrap: wrap;
     margin-bottom: 30px;
   }
 }
