--- a/css/responsive-about.css
+++ b/css/responsive-about.css
@@ -15,13 +15,12 @@
 
   .nav-links {
     position: absolute;
-    background-color: #0e1414;
     left: -100%;
     top: 100%;
     width: 100%;
     padding-block: 20px;
     transition: 0.2s ease-in-out;
-    padding: 30px 0;
+    padding: 2rem 1rem;
   }
 
   .nav-links.active {
@@ -30,6 +29,10 @@
 
   .nav-links ul {
     flex-direction: column;
+    align-items: flex-start;
+    background-color: #182222;
+    border-radius: 0.5rem;
+    padding: 3rem;
   }
 }
 
