--- a/css/about.css
+++ b/css/about.css
@@ -22,26 +22,36 @@ body {
   background-color: var(--background-color);
   background-image: url(/images/about-blur.svg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 h1 {
   font-size: 4rem;
-  font-weight: 100;
   color: #fff;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 2rem;
+}
+
+h4 {
+  font-size: 1.3rem;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 100;
 }
 
 p {
   font-family: "Roboto", sans-serif;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   color: var(--secondary-text-color);
 }
 
@@ -150,10 +160,10 @@ ul {
 
 /* Main Container */
 .about-main {
-  height: 30rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 5rem;
 }
 
 .about-description {
@@ -167,6 +177,50 @@ ul {
 
 .about-description p {
   margin-bottom: 1rem;
+  line-height: 2rem;
+}
+
+/* Team Section */
+
+.team-container {
+  padding: 5rem 2rem;
+}
+
+.cards-container {
+  display: flex;
+  margin: 4rem 0;
+  gap: 5rem;
+}
+
+.card-top {
+  display: flex;
+}
+
+.team-container img {
+  width: 15rem;
+  border-radius: 0.5rem;
+}
+
+.team-container .text {
+  margin-left: 2rem;
+}
+
+.team-container .text h3 {
+  margin-bottom: 0.8rem;
+}
+
+.team-container .text i {
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.card-bottom {
+  margin-top: 2rem;
+}
+
+.card-bottom p {
+  line-height: 2rem;
 }
 
 /* footer */
