--- a/css/contact.css
+++ b/css/contact.css
@@ -51,7 +51,7 @@ h4 {
 
 p {
   font-family: "Roboto", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color: var(--secondary-text-color);
 }
 
@@ -156,4 +156,29 @@ ul {
   font-size: 2rem;
   font-weight: lighter;
   display: none;
+}
+
+/* Contact Head */
+.contact-head {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  padding: 5rem 3rem;
+}
+
+.contact-head .description {
+  width: 30rem;
+}
+
+.contact-head .description h1 {
+  margin-bottom: 1.8rem;
+}
+
+.contact-head .description p {
+  line-height: 2rem;
+}
+
+.contact-head img {
+  width: 30vw;
 }
