--- a/css/responsive-contact.css
+++ b/css/responsive-contact.css
@@ -34,11 +34,29 @@
     border-radius: 0.5rem;
     padding: 3rem;
   }
+
+  /* Contact Form */
+  .form-container {
+    margin: 2rem;
+    padding: 3rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  p {
+    font-size: 1.3rem;
+  }
 }
 
 @media screen and (max-width: 767px) {
   h1 {
-    font-size: 3rem;
+    font-size: 2rem;
+  }
+
+  p {
+    font-size: 1.1rem;
   }
 
   .primary-button {
@@ -66,6 +84,31 @@
 
   .contact-head img {
     width: 40vw;
+  }
+
+  .form-container {
+    text-align: center;
+    margin: 0;
+    padding: 2rem;
+  }
+
+  .form-container form {
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .form-container form input,
+  textarea {
+    font-size: 1.1rem;
+  }
+
+  .form-left,
+  .form-right {
+    width: 100%;
+  }
+
+  textarea {
+    height: 10rem;
   }
 
   /* subfooter */
