--- a/css/responsive-contact.css
+++ b/css/responsive-contact.css
@@ -52,6 +52,10 @@
   p {
     font-size: 1.3rem;
   }
+
+  .demo-container .text {
+    width: 30rem;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -114,6 +118,10 @@
   textarea {
     height: 10rem;
   }
+  
+  .demo-container .text {
+    width: 20rem;
+  }
 
   /* subfooter */
   .subfooter {
@@ -139,7 +147,7 @@
   }
 }
 
-@media screen and(max-width:479px) {
+@media screen and(max-width: 479px) {
   :root {
     --padding-inline-section: 10px;
   }
