--- a/css/responsive-contact.css
+++ b/css/responsive-contact.css
@@ -56,6 +56,34 @@
   .demo-container .text {
     width: 30rem;
   }
+
+  .newsletter {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .newsletter h2 {
+    margin-bottom: 2rem;
+  }
+
+  .newsletter .form {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .newsletter input {
+    padding: 1rem;
+  }
+
+  /* subfooter */
+  .subfooter {
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 50px 10px;
+    gap: 2rem;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -118,16 +146,9 @@
   textarea {
     height: 10rem;
   }
-  
+
   .demo-container .text {
     width: 20rem;
-  }
-
-  /* subfooter */
-  .subfooter {
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 50px 10px;
   }
 
   .sub-footer-container {
