--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   font-family: "poppins", sans-serif;
   color: #fff;
   background-color: var(--background-color);
-  background-image: url(/images/bg-home.svg);
+  background-image: url(/images/home-bg.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
